# glutdemo

./: .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  index.js  shader.frag  shader.vert
resources/: shader.frag  shader.vert
src/: image.c  image.h  main.c  mesh.c  mesh.h  renderer.c  renderer.h  shaderutils.c  shaderutils.h  transform.c  transform.h
src/macros/: applyall.h  constants.h  dbg.h
